--- a/about.html
+++ b/about.html
@@ -1,84 +1,137 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" media="screen and (max-width: 768px)" href="css/mobile.css">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
-  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
-  <link href="https://fonts.googleapis.com/css2?family=Lato&family=Staatliches&display=swap" rel="stylesheet">
-  <title>NewsGrid | About</title>
-</head>
-<body>
-  <nav id="main-nav">
-    <div class="container">
-      <img src="img/logo.png" alt="NewsGrid" class="logo">
-      <div class="social">
-        <a href="https://facebook.com" target="_blank"><i class="fab fa-facebook fa-2x"></i></a>
-        <a href="https://twitter.com" target="_blank"><i class="fab fa-twitter fa-2x"></i></a>
-        <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram fa-2x"></i></a>
-        <a href="https://youtube.com" target="_blank"><i class="fab fa-youtube fa-2x"></i></a>
-      </div>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a class="current" href="about.html">About</a></li>
-      </ul>
-    </div>
-  </nav>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="./css/style.css" />
+		<link
+			rel="stylesheet"
+			media="screen and (max-width: 768px)"
+			href="./css/mobile.css"
+		/>
+		<link
+			rel="stylesheet"
+			href="https://use.fontawesome.com/releases/v5.15.3/css/all.css"
+			integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk"
+			crossorigin="anonymous"
+		/>
+		<link rel="shortcut icon" type="image/x-icon" href="./favicon.ico" />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Lato&family=Staatliches&display=swap"
+			rel="stylesheet"
+		/>
+		<title>NewsGrid | About</title>
+	</head>
+	<body>
+		<nav id="main-nav">
+			<div class="container">
+				<img src="./img/logo.png" alt="NewsGrid" class="logo" />
+				<div class="social">
+					<a href="https://facebook.com" target="_blank"
+						><i class="fab fa-facebook fa-2x"></i
+					></a>
+					<a href="https://twitter.com" target="_blank"
+						><i class="fab fa-twitter fa-2x"></i
+					></a>
+					<a href="https://instagram.com" target="_blank"
+						><i class="fab fa-instagram fa-2x"></i
+					></a>
+					<a href="https://youtube.com" target="_blank"
+						><i class="fab fa-youtube fa-2x"></i
+					></a>
+				</div>
+				<ul>
+					<li><a href="./index.html">Home</a></li>
+					<li><a class="current" href="./about.html">About</a></li>
+				</ul>
+			</div>
+		</nav>
 
-  <section id="about">
-    <div class="container">
-      <div class="page-container">
-        <article class="card">
-          <h1 class="l-heading">About Our Organization</h1>
-          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat dicta officiis animi! Quaerat unde quod sequi eos aut hic consectetur sapiente! Dicta, quo facilis ut ex sint sit porro minima, non sed nulla maxime pariatur in ea libero rem totam accusamus itaque doloribus tempora dolorem eos. Asperiores, veritatis! Maiores, error.</p>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque laboriosam quis itaque laborum provident ad a sunt saepe placeat necessitatibus similique, harum quasi repellendus tempore iste doloremque modi qui. Voluptatem illo fuga laudantium consequuntur, delectus odit quibusdam, architecto eveniet necessitatibus corrupti omnis perspiciatis ratione dolorum ipsa voluptates ullam? Earum quibusdam voluptatum culpa ducimus perspiciatis dolore est maiores porro. Beatae, explicabo perspiciatis. Aperiam eveniet cumque consequatur odio illum doloribus earum voluptatem quaerat porro, illo atque accusamus cupiditate harum adipisci vero saepe totam. Earum ad quibusdam sint. Ipsum modi in soluta ad aperiam architecto illo labore, minus quas illum. Autem nemo, molestias nulla a sed rem illum temporibus minus at fugiat laborum libero alias, porro voluptatibus maxime dolorum esse facere. Id, blanditiis eaque rerum repellendus quis libero tempore mollitia distinctio sit corporis facilis odit tenetur, natus nam illo perferendis quasi! Quae illum nisi voluptates tenetur aliquam. Dolorum deleniti ut et nihil dicta?</p>
-        </article>
-        <aside class="card bg-primary">
-          <h2>Join Our Club</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure, quos.</p>
-          <a href="" class="btn btn-dark btn-block">Join Now</a>
-        </aside>
-      </div>
-    </div>
-  </section>
+		<section id="about">
+			<div class="container">
+				<div class="page-container">
+					<article class="card">
+						<h1 class="l-heading">About Our Organization</h1>
+						<p>
+							Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat
+							dicta officiis animi! Quaerat unde quod sequi eos aut hic
+							consectetur sapiente! Dicta, quo facilis ut ex sint sit porro
+							minima, non sed nulla maxime pariatur in ea libero rem totam
+							accusamus itaque doloribus tempora dolorem eos. Asperiores,
+							veritatis! Maiores, error.
+						</p>
+						<p>
+							Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque
+							laboriosam quis itaque laborum provident ad a sunt saepe placeat
+							necessitatibus similique, harum quasi repellendus tempore iste
+							doloremque modi qui. Voluptatem illo fuga laudantium consequuntur,
+							delectus odit quibusdam, architecto eveniet necessitatibus
+							corrupti omnis perspiciatis ratione dolorum ipsa voluptates ullam?
+							Earum quibusdam voluptatum culpa ducimus perspiciatis dolore est
+							maiores porro. Beatae, explicabo perspiciatis. Aperiam eveniet
+							cumque consequatur odio illum doloribus earum voluptatem quaerat
+							porro, illo atque accusamus cupiditate harum adipisci vero saepe
+							totam. Earum ad quibusdam sint. Ipsum modi in soluta ad aperiam
+							architecto illo labore, minus quas illum. Autem nemo, molestias
+							nulla a sed rem illum temporibus minus at fugiat laborum libero
+							alias, porro voluptatibus maxime dolorum esse facere. Id,
+							blanditiis eaque rerum repellendus quis libero tempore mollitia
+							distinctio sit corporis facilis odit tenetur, natus nam illo
+							perferendis quasi! Quae illum nisi voluptates tenetur aliquam.
+							Dolorum deleniti ut et nihil dicta?
+						</p>
+					</article>
+					<aside class="card bg-primary">
+						<h2>Join Our Club</h2>
+						<p>
+							Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure,
+							quos.
+						</p>
+						<a href="#" class="btn btn-dark btn-block">Join Now</a>
+					</aside>
+				</div>
+			</div>
+		</section>
 
-  <!-- Footer -->
-  <footer id="main-footer" class="py-2">
-    <div class="container footer-container">
-      <div>
-        <img src="./img/logo_light.png" alt="NewsGrid">
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eligendi, minus voluptates! Accusantium quibusdam alias cumque voluptatum consectetur! Doloremque, expedita possimus.</p>
-      </div>
-      <div>
-        <h3>Email Newsletter</h3>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
-        <form>
-          <input type="email" placeholder="Enter Email...">
-          <input type="submit" value="Subscribe" class="btn btn-primary">
-        </form>
-      </div>
-      <div>
-        <h3>Site Links</h3>
-        <ul class="list">
-          <li><a href="#">Help & Support</a></li>
-          <li><a href="#">Privacy Policy</a></li>
-          <li><a href="#">About Us</a></li>
-          <li><a href="#">Contact</a></li>
-        </ul>
-      </div>
-      <div>
-        <h2>Join Our Club</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, doloremque.</p>
-        <a href="#" class="btn btn-secondary">Join Now</a>
-      </div>
-      <div>
-        Copyright &copy; 2019, All Rights Reserved
-      </div>
-    </div>
-  </footer>
-  
-</body>
+		<!-- Footer -->
+		<footer id="main-footer" class="py-2">
+			<div class="container footer-container">
+				<div>
+					<img src="./img/logo_light.png" alt="NewsGrid" />
+					<p>
+						Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eligendi,
+						minus voluptates! Accusantium quibusdam alias cumque voluptatum
+						consectetur! Doloremque, expedita possimus.
+					</p>
+				</div>
+				<div>
+					<h3>Email Newsletter</h3>
+					<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+					<form>
+						<input type="email" placeholder="Enter Email..." />
+						<input type="submit" value="Subscribe" class="btn btn-primary" />
+					</form>
+				</div>
+				<div>
+					<h3>Site Links</h3>
+					<ul class="list">
+						<li><a href="#">Help & Support</a></li>
+						<li><a href="#">Privacy Policy</a></li>
+						<li><a href="#">About Us</a></li>
+						<li><a href="#">Contact</a></li>
+					</ul>
+				</div>
+				<div>
+					<h2>Join Our Club</h2>
+					<p>
+						Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti,
+						doloremque.
+					</p>
+					<a href="#" class="btn btn-secondary">Join Now</a>
+				</div>
+				<div>Copyright &copy; 2019, All Rights Reserved</div>
+			</div>
+		</footer>
+	</body>
 </html>
