--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" media="screen and (max-width: 768px)" href="css/mobile.css">
+  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" media="screen and (max-width: 768px)" href="./css/mobile.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
-  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+  <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico">
   <link href="https://fonts.googleapis.com/css2?family=Lato&family=Staatliches&display=swap" rel="stylesheet">
   <title>NewsGrid | Latest News</title>
 </head>
 <body>
   <nav id="main-nav">
     <div class="container">
-      <img src="img/logo.png" alt="NewsGrid" class="logo">
+      <img src="./img/logo.png" alt="NewsGrid" class="logo">
       <div class="social">
         <a href="https://facebook.com" target="_blank"><i class="fab fa-facebook fa-2x"></i></a>
         <a href="https://twitter.com" target="_blank"><i class="fab fa-twitter fa-2x"></i></a>
@@ -22,8 +22,8 @@
         <a href="https://youtube.com" target="_blank"><i class="fab fa-youtube fa-2x"></i></a>
       </div>
       <ul>
-        <li><a class="current" href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
+        <li><a class="current" href="./index.html">Home</a></li>
+        <li><a href="./about.html">About</a></li>
       </ul>
     </div>
   </nav>
@@ -36,7 +36,7 @@
           <div class="category category-sports">Sports</div>
           <h1>Some Sports Article</h1>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga nemo totam mollitia odit temporibus velit ipsum sequi ea autem saepe quod quibusdam, deserunt voluptatem reiciendis praesentium voluptas exercitationem nulla soluta.</p>
-          <a href="article.html" class="btn btn-primary">Read More</a>
+          <a href="./article.html" class="btn btn-primary">Read More</a>
         </div>
       </div>
     </div>
@@ -48,11 +48,11 @@
       <h2>Editor Picks</h2>
       <div class="articles-container">
         <article class="card">
-          <img src="img/articles/ent1.jpg" alt="">
+          <img src="./img/articles/ent1.jpg" alt="">
           <div>
             <div class="category category-ent">Entertainment</div>
             <h3>
-              <a href="article.html">Lorem ipsum dolor sit amet.</a>
+              <a href="./article.html">Lorem ipsum dolor sit amet.</a>
             </h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt aperiam fugit laboriosam maiores voluptas earum voluptatem, obcaecati sequi vel sunt.</p>
           </div>
@@ -60,31 +60,31 @@
         <article class="card bg-dark">
           <div class="category category-sports">Sports</div>
           <h3>
-            <a href="article.html">Lorem ipsum dolor sit amet.</a>
+            <a href="./article.html">Lorem ipsum dolor sit amet.</a>
           </h3>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt aperiam fugit laboriosam maiores voluptas earum voluptatem, obcaecati sequi vel sunt.</p>
         </article>
         <article class="card">
-          <img src="img/articles/tech1.jpg" alt="">
+          <img src="./img/articles/tech1.jpg" alt="">
           <div class="category category-tech">Technology</div>
           <h3>
-            <a href="article.html">Lorem ipsum dolor sit amet.</a>
+            <a href="./article.html">Lorem ipsum dolor sit amet.</a>
           </h3>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt aperiam fugit laboriosam maiores voluptas earum voluptatem, obcaecati sequi vel sunt.</p>
         </article>
         <article class="card">
           <div class="category category-sports">Sports</div>
           <h3>
-            <a href="article.html">Lorem ipsum dolor sit amet.</a>
+            <a href="./article.html">Lorem ipsum dolor sit amet.</a>
           </h3>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt aperiam fugit laboriosam maiores voluptas earum voluptatem, obcaecati sequi vel sunt.</p>
-          <img src="img/articles/sports1.jpg" alt="">
+          <img src="./img/articles/sports1.jpg" alt="">
         </article>
         <article class="card">
-          <img src="img/articles/tech2.jpg" alt="">
+          <img src="./img/articles/tech2.jpg" alt="">
           <div class="category category-tech">Technology</div>
           <h3>
-            <a href="article.html">Lorem ipsum dolor sit amet.</a>
+            <a href="./article.html">Lorem ipsum dolor sit amet.</a>
           </h3>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt aperiam fugit laboriosam maiores voluptas earum voluptatem, obcaecati sequi vel sunt.</p>
         </article>
@@ -92,7 +92,7 @@
       <article class="card  bg-primary">
         <div class="category category-sports">Sports</div>
         <h3>
-          <a href="article.html">Lorem ipsum dolor sit amet.</a>
+          <a href="./article.html">Lorem ipsum dolor sit amet.</a>
         </h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt aperiam fugit laboriosam maiores voluptas earum voluptatem, obcaecati sequi vel sunt.</p>
       </article>
@@ -100,11 +100,11 @@
         <div>
           <div class="category category-ent">Entertainment</div>
           <h3>
-            <a href="article.html">Lorem ipsum dolor sit amet.</a>
+            <a href="./article.html">Lorem ipsum dolor sit amet.</a>
           </h3>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt aperiam fugit laboriosam maiores voluptas earum voluptatem, obcaecati sequi vel sunt.</p>
         </div>
-        <img src="img/articles/ent2.jpg" alt="">
+        <img src="./img/articles/ent2.jpg" alt="">
       </article>
       </div>
     </div>
